--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "husky": "4",
     "joi": "^17.6.0",
     "jwks-rsa": "^2.1.4",
+    "lodash": "^4.17.21",
     "morgan": "^1.10.0",
     "passport": "^0.6.0",
     "passport-auth0": "^1.4.2",
